--- a/app.yaml
+++ b/app.yaml
@@ -10,29 +10,25 @@ skip_files:
 
 handlers:
 
-#######################
+# - url: /(.*\.(gif|png|jpg|pdf))
+#   static_files: static/\1
+#   upload: static/img/(.*\.(gif|png|jpg|pdf))
 
-- url: /(.*\.(gif|png|jpg|pdf))
-  static_files: static/\1
-  upload: static/img/(.*\.(gif|png|jpg|pdf))
+# - url: /(favicon.ico)
+#   static_files: static/img/\1
+#   upload: static/img/favicon.ico
 
-- url: /(favicon.ico)
-  static_files: static/img/\1
-  upload: static/img/favicon.ico
+# - url: /css/(.*\.(css|map))
+#   static_files: static/css/\1
+#   upload: static/css/(.*\.(css|map))
 
-- url: /css/(.*\.(css|map))
-  static_files: static/css/\1
-  upload: static/css/(.*\.(css|map))
+# - url: /js/(.*\.(js|map))
+#   static_files: static/js/\1
+#   upload: static/js/(.*\.(js|map))
 
-- url: /js/(.*\.(js|map))
-  static_files: static/js/\1
-  upload: static/js/(.*\.(js|map))
-
-- url: /font/(.*\.(eot|svg|ttf|woff))
-  static_files: static/font/\1
-  upload: static/font/(.*\.(eot|svg|ttf|woff))
-
-########################
+# - url: /font/(.*\.(eot|svg|ttf|woff))
+#   static_files: static/font/\1
+#   upload: static/font/(.*\.(eot|svg|ttf|woff))
 
 - url: /assets/scripts/(.*\.(js|map))
   static_files: static/public/assets/scripts/\1
