--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "nl2br-pipe": "^1.1.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
