--- a/index.yaml
+++ b/index.yaml
@@ -10,6 +10,119 @@ indexes:
   properties:
   - name: "Format"
   - name: "Date"
+- kind: "TournamentHistory"
+  properties:
+  - name: "Race"
+  - name: "Type"
+  - name: "Date"
+- kind: "TournamentHistory"
+  properties:
+  - name: "Race"
+  - name: "Date"
+- kind: "TournamentHistory"
+  properties:
+  - name: "Type"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerRace"
+  - name: "PlayerType"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerRace"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerType"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerType"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerRace"
+  - name: "PlayerType"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerLight"
+  - name: "PlayerRace"
+  - name: "PlayerType"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerLight"
+  - name: "PlayerType"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerLight"
+  - name: "PlayerType"
+  - name: "PlayerWater"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerLight"
+  - name: "PlayerNature"
+  - name: "PlayerType"
+  - name: "PlayerWater"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerLight"
+  - name: "PlayerNature"
+  - name: "PlayerType"
+  - name: "PlayerWater"
+  - name: "PlayerZero"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerLight"
+  - name: "PlayerNature"
+  - name: "PlayerType"
+  - name: "PlayerWater"
+  - name: "PlayerZero"
+  - name: "Win"
+  - name: "Date"
+- kind: "MatchUpLog"
+  properties:
+  - name: "Format"
+  - name: "PlayerDark"
+  - name: "PlayerFire"
+  - name: "PlayerLight"
+  - name: "PlayerNature"
+  - name: "PlayerType"
+  - name: "PlayerWater"
+  - name: "PlayerZero"
+  - name: "Win"
+  - name: "Date"
 - kind: "MatchUpLog"
   properties:
   - name: "Format"
