--- a/app.yaml
+++ b/app.yaml
@@ -1,40 +1,11 @@
 runtime: go111
-
-# skipfilesがgo111でdeprecated.代わりに.gcloudignoreを使う
-#   - ^(.*/)?.*/node_modules/.*
-#   - ^(.*/)?.*/test/.*
-#   - ^(.*/)?.*/src/.*
-#   - ^(.*/)?.*/build/.*
+service: revolutionary
 
 handlers:
-
-# - url: /(.*\.(gif|png|jpg|pdf))
-#   static_files: static/\1
-#   upload: static/img/(.*\.(gif|png|jpg|pdf))
-
-# - url: /(favicon.ico)
-#   static_files: static/img/\1
-#   upload: static/img/favicon.ico
 
   - url: /frontend/(.*\.(gif|png|jpeg|jpg|css|js|ico))$
     static_files: dist/\1
     upload: dist/(.*)
-
-  # - url: /(.*\.(css|map))
-  #   static_files: static/\1
-  #   upload: static/(.*\.(css|map))
-
-# - url: /js/(.*\.(js|map))
-#   static_files: static/js/\1
-#   upload: static/js/(.*\.(js|map))
-
-# - url: /font/(.*\.(eot|svg|ttf|woff))
-#   static_files: static/font/\1
-#   upload: static/font/(.*\.(eot|svg|ttf|woff))
-
-# - url: /assets/scripts/(.*\.(js|map))
-#   static_files: static/public/assets/scripts/\1
-#   upload: static/dist/assets/scripts/(.*\.(js|map))
 
   - url: /
     static_files: dist/index.html
